<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_widget_background"
    android:theme="@style/ThemeWidgetSystem"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:theme="@style/ThemeWidgetTextBackground"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="4dp" />

        <TextView
            android:id="@+id/btn_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/today" />

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_backwards"
            android:padding="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:theme="@style/ThemeWidgetTextContainer"
        android:background="@drawable/schedule_container_background"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="08:20" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="09:55" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10:05"
                android:layout_marginTop="@dimen/items_gap" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="11:40" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="11:50"
                android:layout_marginTop="@dimen/items_gap" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="13:25" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject_placeholder_1"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_placeholder_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject_placeholder_2"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/items_gap"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_placeholder_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject_placeholder_3"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/items_gap"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_placeholder_3" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>